compiler-core/src/parse/snapshots/rakun_core__parse__tests__type_invalid_constructor_arg.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nrecord A {\n    A(type: String)\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:7
  │
3 │     A(type: String)
  │       ^^^^ I was not expecting this

Found the keyword `type`, expected one of: 
- `)`
- a constructor argument name
